--- a/projects/rtos_fourwheel/rtos_fourwheel.ioc
+++ b/projects/rtos_fourwheel/rtos_fourwheel.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
@@ -17,7 +18,9 @@ Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PA13
 Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_tim1
+Mcu.Pin12=PB3
+Mcu.Pin13=PB4
+Mcu.Pin14=VP_SYS_VS_tim1
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
@@ -26,7 +29,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB1
-Mcu.PinsNb=13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -34,6 +37,8 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -61,6 +66,17 @@ PA3.Signal=GPIO_Output
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
 PB1.Signal=S_TIM3_CH4
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB3.GPIO_Label=touch
+PB3.GPIO_PuPd=GPIO_PULLDOWN
+PB3.Locked=true
+PB3.Signal=GPXTI3
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB4.GPIO_Label=ir
+PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.Signal=GPXTI4
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -121,6 +137,10 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
